the latest resizings were added

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -114,8 +114,8 @@
         </div>
       </header>
     </div>
-    <div class="wrapper">
-      <div class="settings-page__wrap">
+    <div class="settings-page__wrap">
+      <div class="container">
         <div class="settings-page__title">
           <h2 class="text-surfie-green">Settings</h2>
         </div>
@@ -125,8 +125,10 @@
                   <use href="images/svg/svg-sprite/symbol/sprite.svg#check" x="0" y="0"></use>
                 </svg></span></h3>
         </div>
-        <div class="settings-page__catalog">
-          <div class="catalog">
+      </div>
+      <div class="settings-page__catalog">
+        <div class="catalog">
+          <div class="container">
             <div class="catalog__tabs tabs js-tabs">
               <div class="catalog__tab js-tabs-tab " data-tab="general">
                 <div class="catalog__tab-title">General</div>
@@ -141,7 +143,9 @@
                 <div class="catalog__tab-title">Notifications</div>
               </div>
             </div>
-            <div class="catalog__content">
+          </div>
+          <div class="catalog__content">
+            <div class="container">
               <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
                 <div class="settings-general">
                   <div class="settings-general__wrap">
@@ -338,43 +342,36 @@
               <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
                 <div class="settings-education">
                   <div class="settings-education__wrap">
-                    <div class="settings-education__col">
+                    <div class="settings-education__col-1">
                       <div class="settings-education__heading">
                         <div class="row-group row-group--align-center">
-                          <div class="row-group__item">
-                            <h4>Education:</h4>
-                          </div>
-                          <div class="row-group__item"><a class="inline-button inline-button--boston-blue" href="#"><span class="inline-button__icon">
-                                                    <svg class="svg-icon svg-icon--boston-blue" width="12" height="12">
-                                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
-                                                    </svg></span><span>Edit</span></a>
-                          </div>
+                          <h4>Education:</h4>
                         </div>
                       </div>
                       <div class="settings-education__line">
                         <div class="info-list">
                           <div class="info-list__item">
                             <div class="info-list__left">
-                              <p class="font-semibold text-boston-blue">#1:</p>
+                              <p class="p-sm font-semibold text-boston-blue">#1:</p>
                             </div>
                             <div class="info-list__right">
-                              <p class="font-semibold">2012-2017</p>
+                              <p class="p-sm font-semibold">2012-2017</p>
                             </div>
                           </div>
                           <div class="info-list__item">
                             <div class="info-list__left">
-                              <p class="font-semibold text-silver-chalice">Diploma type:</p>
+                              <p class="p-sm font-semibold text-silver-chalice">Diploma type:</p>
                             </div>
                             <div class="info-list__right">
-                              <p class="font-semibold">Magister</p>
+                              <p class="p-sm font-semibold">Magister</p>
                             </div>
                           </div>
                           <div class="info-list__item">
                             <div class="info-list__left">
-                              <p class="font-semibold text-silver-chalice">Diploma category:</p>
+                              <p class="p-sm font-semibold text-silver-chalice">Diploma category:</p>
                             </div>
                             <div class="info-list__right">
-                              <p class="font-semibold">Translation &amp; Interpreting</p>
+                              <p class="p-sm font-semibold">Translation &amp; Interpreting</p>
                             </div>
                           </div>
                         </div>
@@ -384,57 +381,48 @@
                           <div class="info-list__items">
                             <div class="info-list__item">
                               <div class="info-list__left">
-                                <p class="font-semibold text-boston-blue">#2:</p>
+                                <p class="p-sm font-semibold text-boston-blue">#2:</p>
                               </div>
                               <div class="info-list__right">
-                                <p class="font-semibold">2012-2017</p>
+                                <p class="p-sm font-semibold">2012-2017</p>
                               </div>
                             </div>
                             <div class="info-list__item">
                               <div class="info-list__left">
-                                <p class="font-semibold text-silver-chalice">Diploma type:</p>
+                                <p class="p-sm font-semibold text-silver-chalice">Diploma type:</p>
                               </div>
                               <div class="info-list__right">
-                                <p class="font-semibold">Magister</p>
+                                <p class="p-sm font-semibold">Magister</p>
                               </div>
                             </div>
                             <div class="info-list__item">
                               <div class="info-list__left">
-                                <p class="font-semibold text-silver-chalice">Diploma category:</p>
+                                <p class="p-sm font-semibold text-silver-chalice">Diploma category:</p>
                               </div>
                               <div class="info-list__right">
-                                <p class="font-semibold">Translation &amp; Interpreting</p>
+                                <p class="p-sm font-semibold">Translation &amp; Interpreting</p>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col">
+                    <div class="settings-education__col-2">
                       <div class="settings-education__heading">
-                        <div class="row-group row-group--align-center">
-                          <div class="row-group__item">
-                            <h4>Tax information:</h4>
-                          </div>
-                          <div class="row-group__item"><a class="inline-button inline-button--boston-blue" href="#"><span class="inline-button__icon">
-                                                    <svg class="svg-icon svg-icon--boston-blue" width="12" height="12">
-                                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
-                                                    </svg></span><span>Edit</span></a>
-                          </div>
-                        </div>
+                        <h4>Tax information:</h4>
                       </div>
                       <div class="info-list">
                         <div class="info-list__item">
                           <div class="info-list__left">
-                            <p class="font-semibold text-silver-chalice">Issuing invoice:</p>
+                            <p class="p-sm font-semibold text-silver-chalice">Issuing invoice:</p>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold">IVP</p>
+                            <p class="p-sm font-semibold">IVP</p>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col">
+                    <div class="settings-education__col-3">
                       <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
@@ -488,7 +476,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col">
+                    <div class="settings-education__col-4">
                       <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
