header was fixed

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -47,7 +47,7 @@
                         <use href="images/svg/svg-sprite/symbol/sprite.svg#bell" x="0" y="0"></use>
                       </svg>
                     </div>
-                    <div class="notifications-dropdown__toggle-title">4 new</div>
+                    <div class="notifications-dropdown__toggle-title">4</div>
                   </div>
                   <div class="dropdown__body notifications-dropdown__body js-dropdown-body">
                     <div class="custom-scroll" data-dropdown-simplebar="data-dropdown-simplebar">
@@ -57,7 +57,7 @@
                 </div>
               </div>
               <div class="header__dropdown">
-                <div class="select js-select select--radius-secondary">
+                <div class="select js-select select--inline">
                   <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
                   </button>
                   <div class="select__dropdown js-select-dropdown">
@@ -74,7 +74,11 @@
               <div class="header__dropdown">
                 <div class="dropdown js-dropdown user-dropdown" data-dropdown="user">
                   <div class="dropdown__toggle user-dropdown__toggle" data-dropdown-toggle="user">
-                    <div class="user-dropdown__toggle-avatar"></div>
+                    <div class="user-dropdown__toggle-avatar">
+                      <div class="avatar">
+                        <figure style="background-image:url('undefined')"></figure>
+                      </div>
+                    </div>
                     <div class="user-dropdown__toggle-name">Justas</div>
                     <div class="user-dropdown__toggle-chevron">
                       <svg class="svg-icon svg-icon--surfie-green" width="9" height="5">
