upload document reactions were addde

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -191,10 +191,10 @@
                   <div class="upload-documents">
                     <div class="upload-documents__header">
                       <div class="upload-documents__header-title">
-                        <h4>Uploaded documents:</h4>
+                        <h4>Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span></h4>
                       </div>
                       <div class="upload-documents__header-button">
-                        <button class="button button--bg-white button--shadowed" type="button"><span>Download all</span><span class="button__icon">
+                        <button class="button button--bg-white button--disabled button--shadowed" type="button"><span>Download all</span><span class="button__icon">
                                               <svg class="svg-icon" width="21" height="19">
                                                 <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
                                               </svg></span>
