--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -73,7 +73,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="column-group__item"><a class="link" href="#">Forgot password?</a>
+                  <div class="column-group__item">
+                    <a class="link" href="#">Forgot password?
+                    </a>
                   </div>
                 </div>
               </div>
@@ -95,7 +97,9 @@
               </button>
             </div>
           </div>
-          <div class="form-box__footer"><a class="link link--underline" href="#">Create an account</a>
+          <div class="form-box__footer">
+            <a class="link link--underline" href="#">Create an account
+            </a>
           </div>
         </div>
       </div>
