--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -896,6 +896,33 @@
         </div>
       </div>
     </div>
+    <div class="modal password-change-success-modal" data-modal="password-change-success-modal">
+      <div class="modal__close" data-modal-close="password-change-success-modal">
+        <div class="close">
+          <svg class="svg-icon svg-icon--alto" width="20" height="20">
+            <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+          </svg>
+        </div>
+      </div>
+      <div class="password-change-success-modal__wrap">
+        <div class="password-change-success-modal__icon"><img src="images/icons/check-circle.svg" alt="check" /></div>
+        <div class="password-change-success-modal__title">
+          <h3 class="text-surfie-green">Your password has been changed sucsessfully</h3>
+        </div>
+        <div class="password-change-success-modal__text">
+          <p>Your new password is:</p>
+        </div>
+        <div class="password-change-success-modal__password">
+          <div class="palette">
+            <p class="font-bold">6151651656156116</p>
+          </div>
+        </div>
+        <div class="password-change-success-modal__button">
+          <button class="button button--bordered" type="button" data-modal-close="password-change-success-modal">OK !
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
   <script src="./scripts/vendor.js"></script>
   <script src="./scripts/main.js"></script>
