Links colors were changed to surfie-green

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="settings-general__avatar-button">
                           <button class="button button--round button--bg-alabaster button--size-50" type="button">
-                            <svg class="svg-icon svg-icon--boston-blue" width="18" height="16">
+                            <svg class="svg-icon svg-icon--surfie-green" width="18" height="16">
                               <use href="images/svg/svg-sprite/symbol/sprite.svg#camera" x="0" y="0"></use>
                             </svg>
                           </button>
@@ -180,8 +180,8 @@
                           <div class="row-group__item">
                             <h4>General information:</h4>
                           </div>
-                          <div class="row-group__item"><a class="inline-button inline-button--boston-blue" href="#"><span class="inline-button__icon">
-                                                    <svg class="svg-icon svg-icon--boston-blue" width="12" height="12">
+                          <div class="row-group__item"><a class="inline-button" href="#"><span class="inline-button__icon">
+                                                    <svg class="svg-icon svg-icon--surfie-green" width="12" height="12">
                                                       <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
                                                     </svg></span><span>Edit</span></a>
                           </div>
@@ -233,7 +233,7 @@
                             <div class="font-semibold text-silver-chalice">Address:</div>
                           </div>
                           <div class="info-list__right">
-                            <p class="font-semibold text-boston-blue">Adres 5g.</p>
+                            <p class="font-semibold text-surfie-green">Adres 5g.</p>
                           </div>
                         </div>
                         <div class="info-list__item">
@@ -284,8 +284,8 @@
                           <div class="row-group__item">
                             <h4>Bank information:</h4>
                           </div>
-                          <div class="row-group__item"><a class="inline-button inline-button--boston-blue" href="#"><span class="inline-button__icon">
-                                                    <svg class="svg-icon svg-icon--boston-blue" width="12" height="12">
+                          <div class="row-group__item"><a class="inline-button" href="#"><span class="inline-button__icon">
+                                                    <svg class="svg-icon svg-icon--surfie-green" width="12" height="12">
                                                       <use href="images/svg/svg-sprite/symbol/sprite.svg#pencil" x="0" y="0"></use>
                                                     </svg></span><span>Edit</span></a>
                           </div>
@@ -345,10 +345,10 @@
                   </div>
                 </div>
               </div>
-              <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
+              <div class="catalog__content-item tabs__content js-tab-content" data-content="education">
                 <div class="settings-education">
                   <div class="settings-education__wrap">
-                    <div class="settings-education__col-1">
+                    <div class="settings-education__col">
                       <div class="settings-education__heading">
                         <div class="row-group row-group--align-center">
                           <h4>Education:</h4>
@@ -358,7 +358,7 @@
                         <div class="info-list">
                           <div class="info-list__item">
                             <div class="info-list__left">
-                              <p class="p-sm font-semibold text-boston-blue">#1:</p>
+                              <p class="p-sm font-semibold text-surfie-green">#1:</p>
                             </div>
                             <div class="info-list__right">
                               <p class="p-sm font-semibold">2012-2017</p>
@@ -387,7 +387,7 @@
                           <div class="info-list__items">
                             <div class="info-list__item">
                               <div class="info-list__left">
-                                <p class="p-sm font-semibold text-boston-blue">#2:</p>
+                                <p class="p-sm font-semibold text-surfie-green">#2:</p>
                               </div>
                               <div class="info-list__right">
                                 <p class="p-sm font-semibold">2012-2017</p>
@@ -413,7 +413,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col-2">
+                    <div class="settings-education__col">
                       <div class="settings-education__heading">
                         <h4>Tax information:</h4>
                       </div>
@@ -428,7 +428,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col-3">
+                    <div class="settings-education__col">
                       <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
@@ -482,7 +482,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="settings-education__col-4">
+                    <div class="settings-education__col">
                       <div class="settings-education__heading settings-education__heading--alt">
                         <div class="row-group row-group--align-center">
                           <div class="row-group__item">
