--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -15,103 +15,108 @@
   <div class="settings-page">
     <div class="settings-page__header">
       <header class="header">
-        <div class="header__wrap">
-          <div class="header__left">
-            <div class="header__logo">
-              <div class="header__logo-icon"><img src="images/logo.svg" alt="logo" /></div><span class="header__logo-title">Crm Name</span>
-            </div>
-          </div>
-          <div class="header__right">
-            <div class="header__navigation">
-              <div class="navigation">
-                <div class="navigation__items">
-                  <div class="navigation__item"><a class="navigation__link " href="#">Employers</a></div>
-                  <div class="navigation__item"><a class="navigation__link is-active" href="#">Clients</a></div>
-                  <div class="navigation__item"><a class="navigation__link " href="#">Offices</a></div>
-                  <div class="navigation__item"><a class="navigation__link " href="#">Accounting</a></div>
-                  <div class="navigation__item"><a class="navigation__link " href="#">Statements</a></div>
-                  <div class="navigation__item"><a class="navigation__link " href="#">Statements</a></div>
-                  <div class="navigation__item"><a class="navigation__link " href="#">Messages
-                      <div class="navigation__link-unread"><span class="unread">253</span>
-                      </div>
-                    </a></div>
-                </div>
+        <div class="container">
+          <div class="header__wrap">
+            <div class="header__left">
+              <div class="header__logo">
+                <div class="header__logo-icon"><img src="images/logo.svg" alt="logo" /></div><span class="header__logo-title">Crm Name</span>
               </div>
             </div>
-            <div class="header__dropdowns">
-              <div class="header__dropdown">
-                <div class="dropdown notifications-dropdown js-dropdown" data-dropdown="notifications">
-                  <div class="dropdown__toggle notifications-dropdown__toggle" data-dropdown-toggle="notifications">
-                    <div class="notifications-dropdown__toggle-icon">
-                      <svg class="svg-icon svg-icon--surfie-green" width="24" height="25">
-                        <use href="images/svg/svg-sprite/symbol/sprite.svg#bell" x="0" y="0"></use>
-                      </svg>
-                    </div>
-                    <div class="notifications-dropdown__toggle-title">4</div>
+            <div class="header__right">
+              <div class="header__navigation js-header-navigation">
+                <div class="navigation">
+                  <div class="navigation__items">
+                    <div class="navigation__item"><a class="navigation__link " href="#">Employers</a></div>
+                    <div class="navigation__item"><a class="navigation__link is-active" href="#">Clients</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Offices</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Accounting</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Statements</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Statements</a></div>
+                    <div class="navigation__item"><a class="navigation__link " href="#">Messages
+                        <div class="navigation__link-unread"><span class="unread">253</span>
+                        </div>
+                      </a></div>
                   </div>
-                  <div class="dropdown__body notifications-dropdown__body js-dropdown-body">
-                    <div class="custom-scroll" data-dropdown-simplebar="data-dropdown-simplebar">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                </div>
+              </div>
+              <div class="header__dropdowns">
+                <div class="header__dropdown">
+                  <div class="dropdown notifications-dropdown js-dropdown" data-dropdown="notifications">
+                    <div class="dropdown__toggle notifications-dropdown__toggle" data-dropdown-toggle="notifications">
+                      <div class="notifications-dropdown__toggle-icon">
+                        <svg class="svg-icon svg-icon--surfie-green" width="24" height="25">
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#bell" x="0" y="0"></use>
+                        </svg>
+                      </div>
+                      <div class="notifications-dropdown__toggle-title">4</div>
+                    </div>
+                    <div class="dropdown__body notifications-dropdown__body js-dropdown-body">
+                      <div class="custom-scroll" data-dropdown-simplebar="data-dropdown-simplebar">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="header__dropdown">
+                  <div class="select js-select select--inline select--h-100">
+                    <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
+                    </button>
+                    <div class="select__dropdown js-select-dropdown">
+                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
+                        <div class="select__options js-select-options">
+                          <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
+                          <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
+                        </div>
+                      </div>
+                    </div>
+                    <input class="select__input js-select-input" type="hidden" />
+                  </div>
+                </div>
+                <div class="header__dropdown">
+                  <div class="dropdown js-dropdown user-dropdown" data-dropdown="user">
+                    <div class="dropdown__toggle user-dropdown__toggle" data-dropdown-toggle="user">
+                      <div class="user-dropdown__toggle-avatar">
+                        <div class="avatar">
+                          <figure style="background-image:url('undefined')"></figure>
+                        </div>
+                      </div>
+                      <div class="user-dropdown__toggle-name">Justas</div>
+                      <div class="user-dropdown__toggle-chevron">
+                        <svg class="svg-icon svg-icon--surfie-green" width="9" height="5">
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="dropdown__body js-dropdown-body user-dropdown__body">
+                      <div class="user-dropdown__content custom-scroll" data-simplebar="data-simplebar"></div>
+                    </div>
+                    <div class="dropdown__body user-dropdown__body js-dropdown-body">
+                      <div class="user-dropdown-menu">
+                        <div class="user-dropdown-menu__items">
+                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="settings-page.html">
+                              <div class="user-dropdown-menu__icon">
+                                <svg class="svg-icon svg-icon--surfie-green" width="18" height="18">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#cog" x="0" y="0"></use>
+                                </svg>
+                              </div>
+                              <div class="user-dropdown-menu__title">Settings</div>
+                            </a></div>
+                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="#">
+                              <div class="user-dropdown-menu__icon">
+                                <svg class="svg-icon svg-icon--surfie-green" width="18" height="14">
+                                  <use href="images/svg/svg-sprite/symbol/sprite.svg#log-out" x="0" y="0"></use>
+                                </svg>
+                              </div>
+                              <div class="user-dropdown-menu__title">Log Out</div>
+                            </a></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="header__dropdown">
-                <div class="select js-select select--inline">
-                  <button class="select__label js-select-label" data-selected="lt" type="button"><img src="images/icons/planet.svg" /><span>LT</span>
-                  </button>
-                  <div class="select__dropdown js-select-dropdown">
-                    <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
-                      <div class="select__options js-select-options">
-                        <div class="select__option js-select-option" data-option="lt"><img src="images/icons/planet.svg" /><span>LT</span></div>
-                        <div class="select__option js-select-option" data-option="en"><img src="images/icons/planet.svg" /><span>EN</span></div>
-                      </div>
-                    </div>
-                  </div>
-                  <input class="select__input js-select-input" type="hidden" />
-                </div>
-              </div>
-              <div class="header__dropdown">
-                <div class="dropdown js-dropdown user-dropdown" data-dropdown="user">
-                  <div class="dropdown__toggle user-dropdown__toggle" data-dropdown-toggle="user">
-                    <div class="user-dropdown__toggle-avatar">
-                      <div class="avatar">
-                        <figure style="background-image:url('undefined')"></figure>
-                      </div>
-                    </div>
-                    <div class="user-dropdown__toggle-name">Justas</div>
-                    <div class="user-dropdown__toggle-chevron">
-                      <svg class="svg-icon svg-icon--surfie-green" width="9" height="5">
-                        <use href="images/svg/svg-sprite/symbol/sprite.svg#chevron-down" x="0" y="0"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="dropdown__body js-dropdown-body user-dropdown__body">
-                    <div class="user-dropdown__content custom-scroll" data-simplebar="data-simplebar"></div>
-                  </div>
-                  <div class="dropdown__body user-dropdown__body js-dropdown-body">
-                    <div class="user-dropdown-menu">
-                      <div class="user-dropdown-menu__items">
-                        <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="settings-page.html">
-                            <div class="user-dropdown-menu__icon">
-                              <svg class="svg-icon svg-icon--surfie-green" width="18" height="18">
-                                <use href="images/svg/svg-sprite/symbol/sprite.svg#cog" x="0" y="0"></use>
-                              </svg>
-                            </div>
-                            <div class="user-dropdown-menu__title">Settings</div>
-                          </a></div>
-                        <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="#">
-                            <div class="user-dropdown-menu__icon">
-                              <svg class="svg-icon svg-icon--surfie-green" width="18" height="14">
-                                <use href="images/svg/svg-sprite/symbol/sprite.svg#log-out" x="0" y="0"></use>
-                              </svg>
-                            </div>
-                            <div class="user-dropdown-menu__title">Log Out</div>
-                          </a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="header__burger">
+                <button class="burger js-header-navigation-burger"><span></span></button>
               </div>
             </div>
           </div>
