--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -15,21 +15,24 @@
   <div class="employer-application-page">
     <div class="employer-application-page__header">
       <header class="inner-header">
-        <div class="inner-header__wrap"><a class="inner-header__logo" href="#"><img src="images/logo.svg" alt="logo" /></a>
-          <div class="inner-header__lang">
-            <div class="select js-select select--bordered select--auto">
-              <button class="select__label js-select-label" data-selected="eng" type="button"><img src="images/flags/gb.svg" /><span>English</span>
-              </button>
-              <div class="select__dropdown js-select-dropdown">
-                <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
-                  <div class="select__options js-select-options">
-                    <div class="select__option js-select-option" data-option="eng"><img src="images/flags/gb.svg" /><span>English</span></div>
-                    <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg" /><span>Lithuanian</span></div>
-                    <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg" /><span>Lithuanian</span></div>
+        <div class="container">
+          <div class="inner-header__wrap">
+            <div class="inner-header__logo"><img src="images/logo.svg" alt="logo" /></div>
+            <div class="inner-header__lang">
+              <div class="select js-select select--bordered select--auto">
+                <button class="select__label js-select-label" data-selected="eng" type="button"><img src="images/flags/gb.svg" /><span>English</span>
+                </button>
+                <div class="select__dropdown js-select-dropdown">
+                  <div class="custom-scroll select__dropdown-scroll" data-select-simplebar="data-select-simplebar">
+                    <div class="select__options js-select-options">
+                      <div class="select__option js-select-option" data-option="eng"><img src="images/flags/gb.svg" /><span>English</span></div>
+                      <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg" /><span>Lithuanian</span></div>
+                      <div class="select__option js-select-option" data-option="lt"><img src="images/flags/lt.svg" /><span>Lithuanian</span></div>
+                    </div>
                   </div>
                 </div>
+                <input class="select__input js-select-input" type="hidden" />
               </div>
-              <input class="select__input js-select-input" type="hidden" />
             </div>
           </div>
         </div>
