edit-avatar-tool inititalization was moved to edit-avatar-modal functiob

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -928,7 +928,7 @@
         </div>
       </div>
     </div>
-    <div class="modal edit-avatar-modal" data-modal="edit-avatar-modal">
+    <div class="modal edit-avatar-modal js-edit-avatar-modal" data-modal="edit-avatar-modal">
       <div class="modal__close" data-modal-close="edit-avatar-modal">
         <div class="close">
           <svg class="svg-icon svg-icon--alto" width="20" height="20">
