--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -137,10 +137,10 @@
         <div class="settings-page__catalog">
           <div class="catalog">
             <div class="catalog__tabs tabs js-tabs">
-              <div class="catalog__tab js-tabs-tab " data-tab="general">
+              <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
                 <div class="catalog__tab-title">General</div>
               </div>
-              <div class="catalog__tab js-tabs-tab is-active" data-tab="education">
+              <div class="catalog__tab js-tabs-tab " data-tab="education">
                 <div class="catalog__tab-title">Education &amp; Files</div>
               </div>
               <div class="catalog__tab js-tabs-tab " data-tab="services">
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="catalog__content">
-              <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
+              <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="general">
                 <div class="settings-general">
                   <div class="settings-general__row">
                     <div class="settings-general__avatar">
@@ -346,7 +346,7 @@
                   </div>
                 </div>
               </div>
-              <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
+              <div class="catalog__content-item tabs__content js-tab-content" data-content="education">
                 <div class="settings-education">
                   <div class="settings-education__row">
                     <div class="settings-education__col">
@@ -1269,9 +1269,6 @@
         <div class="edit-avatar-modal__box">
           <div class="edit-avatar-tool js-edit-avatar-tool">
             <div class="edit-avatar-tool__image-box"><img class="edit-avatar-tool__image" src="images/user/avatar.jpg" alt="avatar" /></div>
-            <div class="edit-avatar-tool__tip">
-              <p class="p-sm font-style-italic">*will change up to x3 as on linkedin</p>
-            </div>
             <div class="edit-avatar-tool__title">
               <h5>Change size <span class="text-surfie-green edit-avatar-tool__number">1</span></h5>
             </div>
